@@ -139,45 +139,7 @@ but is provided as a convenience option for those wanting to embed
 the "prterun" command in a script that can be optionally used to
 run either independently or under a persistent DVM.
 
-A required argument are passed to the "--dvm" directive to specify the
-location of the DVM controller (e.g., "--dvm pid:12345") or by passing
-the string "search" to instead search for an existing controller.
-
-Supported options include:
-
-search      directs "prterun" to search for available DVM controllers it
-            is authorized to use, connecting to the first candidate it
-            finds
-
-pid:<arg>   provides the PID of the target DVM controller. This can
-            be given as either the PID itself (arg = int) or the path
-            to a file that contains the PID (arg = file:<path>)
-
-file:<path> provides the path to a PMIx rendezvous file that is
-            output by PMIx servers - the file contains all the
-            required information for completing the connection
-
-uri:<arg>   specifies the URI of the DVM controller, or the name of
-            the file (specified as file:filename) that contains that info
-
-ns:<arg>    specifies the namespace of the DVM controller
-
-Specifying "--dvm search" directs "prterun" to search for available
-DVM controllers it is authorized to use, connecting to the first such
-candidate it finds.
-
-Examples:
-  prterun --dvm file:dvm_uri.txt --np 4 ./a.out
-
-  prterun --dvm pid:12345 --np 4 ./a.out
-
-  prterun --dvm uri:file:dvm_uri.txt --np 4 ./a.out
-
-  prterun --dvm ns:prte-node1-2095 --np 4 ./a.out
-
-  prterun --dvm pid:file:prte_pid.txt --np 4 ./a.out
-
-  prterun --dvm search --np 4 ./a.out
+#include#help-schizo-cli#dvm
 #
 [prtemca]
 #include#help-schizo-cli#prtemca
